--- a/templates/tougcomsys/firsthome/_base_article_form.html
+++ b/templates/tougcomsys/firsthome/_base_article_form.html
@@ -13,11 +13,16 @@
       {% endfor %}
 
       {% block form_fields %}{% endblock %}
-      <div id="save">
-        {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit" name="save-stay" value="1">Save and Stay</button>' field_2='<button type="submit">Save and Go</button>' field_3=aftersave|safe %}
-      </div>
-      <input type="hidden" name="staypage" value="{{ staypage }}">
-
+      {% if object %}
+        <div id="save">
+          {% include 'touglates/form_field.html' with label="Submit Form" field_1='<button type="submit" name="save-stay" value="1">Save and Stay</button>' field_2='<button type="submit">Save and Go</button>' field_3=aftersave|safe %}
+        </div>
+        <input type="hidden" name="staypage" value="{{ staypage }}">
+      {% else %}
+        <div id="save">
+          {% include 'touglates/form_field.html' with label="Submit Form" field='<button type="submit">Save and Continue</button>' %}
+        </div>
+      {% endif %}
     </form>
   </div>
   {% block afterform %}{% endblock %}
