--- a/templates/tougcomsys/firsthome/article_form.html
+++ b/templates/tougcomsys/firsthome/article_form.html
@@ -65,16 +65,5 @@
 
 {% endblock %}
 {% block afterform %}
-  <script>
-    addRelatedPopupButton( 'id_list_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-    addRelatedPopupButton( 'id_detail_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-    addRelatedPopupButton( 'id_featured_image', 'Image', '{% url 'tougcomsys:article_image_create' %}', editUrl='', addLabel='add', editLabel='edit' )
-    function getControlIdsForPopups(modelName) {
-        controlIds={
-            'Image': ['id_list_image', 'id_detail_image', 'id_featured_image'],
-        }
-      return controlIds[modelName]
-    }
-  </script>
-
+{{ block.super }}
 {% endblock %}
