Change the way slugs are handled
Add code to the model's clean method
to create a unique slug if a duplicate slug
was created by default

--- a/templates/tougcomsys/firsthome/_base_article_form.html
+++ b/templates/tougcomsys/firsthome/_base_article_form.html
@@ -28,6 +28,6 @@
   </div>
   {% block afterform %}{% endblock %}
   {% if object %}
-    <div><a href="{% url 'tougcomsys:article' pk=object.pk %}" target="preview_{{object.pk}}">Preview</a></div>
+    <div><a href="{% url 'tougcomsys:article' object.pk %}" target="preview_{{object.pk}}">Preview</a></div>
   {% endif %}
 {% endblock %}
