--- a/templates/tougcomsys/firsthome/article_form_page5.html
+++ b/templates/tougcomsys/firsthome/article_form_page5.html
@@ -5,6 +5,10 @@
 
   <div id="div_draft_status">
       {% include 'touglates/form_field.html' with field=form.draft_status label_tag=form.draft_status.label_tag %}
+      {% include 'touglates/form_field.html' with field=form.slug label_tag=form.slug.label_tag %}
+      {% include 'touglates/form_field.html' with field=form.embeddable label_tag=form.embeddable.label_tag %}
+      {% include 'touglates/form_field.html' with field=form.embed_headlines label_tag=form.embed_headlines.label_tag %}
+
 
   </div>
 
