Fix broken urls after changing handling of slugs

--- a/templates/tougcomsys/firsthome/homepage.html
+++ b/templates/tougcomsys/firsthome/homepage.html
@@ -124,7 +124,7 @@
                                 <div class="article event font_size_{{ placement.font_size }}">
                                     <div class="list_textfields">
                                         {% if event.pk %}
-                                            <a href="{% url 'tougcomsys:article' event.pk 'x' %}">
+                                            <a href="{% url 'tougcomsys:article' event.pk %}">
                                                 <div class="headline">
                                                         <h3 >{{ event.headline|safe }}</h3>
                                                 </div>
